# architecture-tools

./: .envrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CODE_CONVENTIONS.md  Cargo.toml  README.md  abstractness.md  adapter.md  coupling.dot  flake.nix  kanban_state.md  manifest  rust-toolchain.toml
.beads/: config.yaml  metadata.json
.claude/: settings.json
.claude/skills/: commit.md
.claude/skills/commit/: SKILL.md
.claude/skills/land-the-plane/: SKILL.md
crates/arch-core-hand/: Cargo.toml
crates/arch-core-hand/src/: domain.rs  lib.rs  python_adapter.rs
crates/architecture-core/: Cargo.toml
crates/architecture-core/src/: analyzer.rs  error.rs  lib.rs  metrics.rs  model.rs  object_type.rs  policy.rs
crates/awt/: Cargo.toml
crates/awt/src/: cli.rs  config.rs  discovery.rs  failures.rs  fitness.rs  graph.rs  main.rs  model.rs  mutations.rs  python_ast.rs  repo.rs  report.rs  runner.rs
crates/awt/src/failures/: basedpyright.rs  common.rs  pytest.rs  ruff.rs
crates/awt/src/fitness/: layer_config.rs  rules.rs
crates/awt/src/graph/: abstractness.rs  architecture_builder.rs  architecture_graph_builder.rs  clustering.rs  coupling_graph.rs  graph_analysis.rs  metrics.rs  object_graph.rs  rules.rs
crates/awt/src/graph/rules/: cycle.rs  god_module.rs  module_hub.rs
crates/awt/src/mutations/: add_parameter.rs  move_module.rs  remove_import.rs  remove_module.rs  remove_parameter.rs  rename_parameter.rs
crates/awt/src/report/: architecture_report.rs  chart.rs  dot.rs  objects_dot.rs  sdp_flow.rs  summary.rs  terminal.rs
crates/awt/src/runner/: command.rs  temp_repo.rs  verifier.rs
crates/graph-analysis/: Cargo.toml
crates/graph-analysis/src/: config.rs  layer_resolver.rs  lib.rs  model.rs
crates/graph-analysis/src/rules/: cross_adapter.rs  cycle.rs  fan_in.rs  god_module.rs  layer_inversion.rs  mod.rs  module_hub.rs
crates/lang-core/: Cargo.toml
crates/lang-core/src/: analyzer.rs  lib.rs  model.rs  namer.rs  object_analyzer.rs
crates/mutation-test/: Cargo.toml
crates/mutation-test/src/: lib.rs  model.rs
crates/mutation-test/src/mutations/: add_parameter.rs  move_module.rs  remove_import.rs  remove_module.rs  remove_parameter.rs  rename_parameter.rs
crates/py-analyzer/: Cargo.toml
crates/py-analyzer/src/: error.rs  lib.rs  model.rs  pyreverse.rs  python_imports.rs  runner.rs
crates/rs-analyzer/: Cargo.toml
crates/rs-analyzer/src/: error.rs  lib.rs  rust_imports.rs  rust_objects.rs
nix/: ai-coach.nix  beads.nix  loctree.nix  rtk.nix  sentrux.nix  sourcery.nix
python/: pyproject.toml
sample-python-project/: README.md  awt.toml  pyproject.toml
sample-python-project/src/: __init__.py  billing.py  customer.py  domain_order.py  order.py  order_service.py  repository.py  routes.py  stripe_client.py
sample-python-project/tests/: test_billing.py  test_customer.py  test_order.py  test_order_service.py  test_repository.py  test_routes.py  test_stripe_client.py
