[workspace]
members = ["crates/awt", "crates/architecture-core", "crates/mutation-test", "crates/py-analyzer", "crates/graph-analysis"]
resolver = "2"

[workspace.metadata]
default-members = ["crates/awt"]

[workspace.lints.clippy]
pedantic = "deny"

[patch.crates-io]
tree-sitter = { path = "vendor/tree-sitter-0.25.10" }
