[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-orders"
version = "0.1.0"
description = "Sample order processing system for AWT testing"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "basedpyright>=1.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
