[package]
name = "awt"
version = "0.1.0"
edition = "2024"
description = "Architecture Wind Tunnel — mutation-based coupling analysis for Python codebases."
license = "AGPL-3.0-or-later"
authors = ["Better Bearings"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tempfile = "3"
ignore = "0.4"
camino = { version = "1", features = ["serde1"] }
tree-sitter = "0.25"
tree-sitter-python = "0.23"
petgraph = "0.7"
rayon = "1"
comfy-table = "7"
colored = "3"
sha2 = "0.10"

[lints]
workspace = true
