[package]
name = "awt"
version = "0.1.0"
edition = "2024"
description = "Architecture Wind Tunnel — static graph analysis for Python codebases."
license = "AGPL-3.0-or-later"
authors = ["Better Bearings"]

[dependencies]
architecture-core = { path = "../architecture-core" }
lang-core = { path = "../lang-core" }
py-analyzer = { path = "../py-analyzer" }
rs-analyzer = { path = "../rs-analyzer" }
clap = { version = "4", features = ["derive"] }
camino = { version = "1", features = ["serde1"] }
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
petgraph = "0.7"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "3"
tempfile = "3"
comfy-table = "7"

[lints]
workspace = true
