[package]
name = "py-analyzer"
version = "0.1.0"
edition = "2024"
description = "Python codebase inspector wrapping pyreverse for LLM consumption."
license = "AGPL-3.0-or-later"
authors = ["Better Bearings"]

[dependencies]
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "macros"] }
tempfile = "3"

[lints]
workspace = true
