[package]
name = "py-analyzer"
version = "0.1.0"
edition = "2024"
description = "Python codebase inspector wrapping pyreverse for LLM consumption."
license = "AGPL-3.0-or-later"
authors = ["Better Bearings"]

[dependencies]
lang-core = { path = "../lang-core" }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
ignore = "0.4"
camino = { version = "1", features = ["serde1"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
